Created csv files for each command/synonym and modularized code to pull from the txt/json files instead of hard coding, AB#44