@@ -1,20 +1,36 @@
 package com.beyondstranded.app;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 class Parser {
 
-    public static boolean parseCommand(List<String> wordlist) {
+    private final List<String> goCommandList = loadCommandMap("Go");
+    private final List<String> dropCommandList = loadCommandMap("Drop");
+    private final List<String> getCommandList = loadCommandMap("Get");
+    private final List<String> lookCommandList = loadCommandMap("Look");
+    private final List<String> talkCommandList = loadCommandMap("Talk");
+
+    boolean parseCommand(List<String> wordlist) {
         boolean result = false;
         String verb;
         String noun;
-        List<String> commands = new ArrayList<>(Arrays.asList("take", "go", "look", "quit", "move", "advance",
-                "travel", "walk", "inspect", "examine", "scan", "watch", "drop", "get", "listen", "build", "steal",
-                "make", "talk", "exit"));
-        List<String> objects = new ArrayList<>(Arrays.asList("tree", "compass", "head", "jungle", "cave", "radio", "bandages",
-                "torch", "waterfall", "cliff", "village", "shore", "forest", "pool", "north", "south", "east", "west", "sea",
-                "up", "down", "shell", "driftwood", "berries", "eye", "sound", "crash", "helicopter", "peak", "ship",
-                "hull", "help", "bottle", "water", "map", "fire", "tool", "rope", "friends", "chief", "healer", "hunter"));
+
+        List<String> directions = new ArrayList<>(List.of("south","east","west","north"));
+        List<String> npc = new ArrayList<>(JsonDataLoader.parseNpcsFromFile().keySet());
+        List<String> items = new ArrayList<>(JsonDataLoader.parseItemsFromFile().keySet());
+
+        List<String> validCommands = Stream.of(goCommandList,dropCommandList,getCommandList,lookCommandList,talkCommandList)
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList());
+
+        List<String> objects = Stream.of(directions,npc,items)
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList());
 
         if (wordlist.size() != 2) {
             System.out.println("ERROR: Only 2 word commands allowed!");
@@ -22,7 +38,7 @@ class Parser {
         else {
             verb = wordlist.get(0).toLowerCase();
             noun = wordlist.get(1).toLowerCase();
-            if (!commands.contains(verb)) {
+            if (!validCommands.contains(verb)) {
                 System.out.println(verb + " is not an option");
             }
             else if (!objects.contains(noun)) {
@@ -35,7 +51,7 @@ class Parser {
         return result;
     }
 
-    public static List<String> wordList(String input) {
+    List<String> wordList(String input) {
         String delims = "\\W+";
         List<String> strlist = new ArrayList<>();
         String[] words = input.split(delims);
@@ -43,43 +59,81 @@ class Parser {
         return strlist;
     }
 
-    public static List<String> userCommand() {
+    List<String> userCommand() {
         List<String> userInput = new ArrayList<>();
         Scanner scanner = new Scanner(System.in);
         boolean validInput = false;
 
+        label:
         while (!validInput) {
             System.out.print("\nEnter a command: ");
             String input = scanner.nextLine().trim().toLowerCase();
 
-            if (input.equals("quit")) {
-                userInput.add(0,"quit");
-                break;
-            }
-            else if(input.equals("")) {
-                System.out.println("Error\n");
-                System.out.printf("\nInvalid Input. Input is empty. Input: %s", input);
-            }
-            else if(input.equals("help")) {
-                userInput.add(0,"help");
-                break;
-            }
-            else if(input.equals("map")) {
-                userInput.add(0,"map");
-                break;
-            }
-            else {
-                List<String> wl = wordList(input);
-                validInput = parseCommand(wl);
-                if (validInput) {
-                    userInput = wl;
-                    System.out.println("status: 200");
-                }
+            switch (input) {
+                case "quit":
+                    userInput.add(0, "quit");
+                    break label;
+                case "":
+                    System.out.println("Error\n");
+                    System.out.printf("\nInvalid Input. Input is empty. Input: %s", input);
+                    break;
+                case "help":
+                    userInput.add(0, "help");
+                    break label;
+                case "map":
+                    userInput.add(0, "map");
+                    break label;
+                default:
+                    List<String> wl = wordList(input);
+                    wl = checkCommand(wl);
+                    validInput = parseCommand(wl);
+                    if (validInput) {
+                        userInput = wl;
+                        System.out.println("status: 200");
+                    }
+                    break;
             }
         }
-
         //scanner.close();
         return userInput;
+    }
+
+    List<String> checkCommand(List<String> userInput) {
+        String firstWord = userInput.get(0);
+
+        if (goCommandList.contains(firstWord)) {
+            userInput.set(0, "go");
+        }
+        else if (dropCommandList.contains(firstWord)) {
+            userInput.set(0, "drop");
+        }
+        else if (getCommandList.contains(firstWord)) {
+            userInput.set(0, "get");
+        }
+        else if (lookCommandList.contains(firstWord)) {
+            userInput.set(0, "look");
+        }
+        else if (talkCommandList.contains(firstWord)) {
+            userInput.set(0, "talk");
+        }
+        return userInput;
+    }
+
+    public List<String> loadCommandMap(String command) throws RuntimeException {
+        List<String> goCommand = new ArrayList<>();
+        String commandPath = "/Commands CSV/" + command + "-Command.csv";
+
+        //noinspection ConstantConditions
+        try (BufferedReader br = new BufferedReader(new InputStreamReader(getClass().getResourceAsStream(commandPath)))) {
+            String line;
+            while ((line = br.readLine()) != null) {
+                String[] tokens = line.split(",");
+                goCommand.addAll(Arrays.asList(tokens));
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return goCommand;
     }
 
     //TEST
